base/ingresses/ing02.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing02
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
    - secretName: ing-placeholder-tls
      hosts:
        - ing-placeholder
  rules:
    - host: ing-placeholder
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc01
                port:
                  number: 80
